fixed my page resposiveness, added navbar and footer, set background image to display none on small screen sizes, used btn-block for google and facebook

--- a/styles/custom-css/employer-sign-in.css
+++ b/styles/custom-css/employer-sign-in.css
@@ -1,36 +1,32 @@
-.leftside {
-    background: url(/TalentPool/img/signin.jpg);
-    position: absolute;
-    width: 630px;
-    height: 778px;
-    left: 0px;
-    top: 0px;
+.image {
+    background-image: url(/img/signin.jpg)!important;
+    background-size: auto cover 100% !important;
+    background-repeat: no-repeat;
+    display: block;
 } 
+
+.content-container {
+    max-width: 1440px;
+    padding-bottom: 0!important;
+    padding-top: 0!important;
+}
 
 .form-box {
     padding-left: 5px;
 }
 
-.f-password {
-    text-align: right;
+.form-check-input{
+    width: 20px;
+    height: 24px;
 }
-    
-    .rightside {
-    width: 85%;
-    display: flex;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    }
-     .header h4{
-    margin-top: 90px!important;
+  
+.header h4{
     font-family: Poppins;
-    font-style: normal;
     font-weight: 500;
-    font-size: 24px;
-    line-height: 36px;
+    font-size: 32px;
+    line-height:42px;
     color: #084482;
-    }
+}
     
     
     label {
@@ -63,13 +59,18 @@
     color: #495057;
     padding-left: 15px;
     }
-    .btn-block {
-     color: white;
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 36px;
+
+    .btn-log .btn-log:visited {
+        background-color: #00AEFF !important;
+    }
+    .btn-log:hover{
+        background-color: #337ab7 !important;
+    } 
+    .btn-log:active{
+        background-color: #084482 !important;
+    } 
+    a {
+        text-decoration: none!important;
     }
 span {
         display: flex;
@@ -89,7 +90,7 @@ span {
     span:before,
     span:after {
         content: '';
-        border-top:1px solid #084482;
+        border-top:2px solid #084482;
         margin: 0 20px 0 0;
         flex: 1 0 20px;
     }
@@ -98,89 +99,42 @@ span {
         margin: 0 0 0 20px;
     }
     
-    .btn-facebook {
-    background: #3B5998;
+    .btn-social {
+    
     box-shadow: 0px 4px 10px rgba(98, 102, 110, 0.1);
     border-radius: 5px;
-    width: 264px;
-    height: 63px;
-    left: 726px;
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    /* line-height: 24px; */
     color: white;
     text-align: center!important;
-    border-radius: 5px;
+    font-family: Poppins;
+    font-size: 18px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     }
-    
+
+    .btn-facebook {
+        background: #3B5998;
+    }
+
     .btn-google {
-    width: 264px;
-    height: 63px;
-    left: 1027px;
-    top: 795px;
     background: #DB4A39;
-    box-shadow: 0px 4px 10px rgba(98, 102, 110, 0.1);
-    border-radius: 5px;
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    text-align: center;
-    color: #FFFFFF;
-    
     }
     
+    .btn-facebook:hover {
+        color:white;
+        background-color: #3a65c4;
+    }
+    
+    
+    .btn-google:hover {
+        color: white;
+        background: #f7220b;
+    }
+    
+    .fa {
+        font-size: 16px;
+    }
+
     .acct {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
-    text-align: center;
-    color: #495057;
-    }
+        font-size: 16px;
     
-    @media only screen and (max-width: 600px) {
-        .header h4 {
-            color: #fff!important;
-        }
-        .header p {
-            color: #fff!important;
-        }
-        .form-group label {
-            color: #fff!important;
-        }
-        .leftside {
-           display: none!important;
-        }
-        .rightside {
-            padding-left: 15px!important;
-            padding-right: 15px!important;
-            background: url(/TalentPool/img/signin.jpg);
-            background-size: cover;
-            background-position: center;
-            width: 100%!important;
-        }
-        .form-row label {
-            color: #fff!important;
-        }
-        
-        .f-password {
-            text-align: left!important;
-            font-size: 18px!important;
-        }
-        .wor {
-            color: #fff!important;
-        }
-
-        .acct {
-            color: white!important;
-            padding-bottom: 30px!important;
-        }
-
-        }
-
-            
+    }
