--- a/styles/custom-css/employer-sign-up.css
+++ b/styles/custom-css/employer-sign-up.css
@@ -1,188 +1,139 @@
-.leftside {
-background: url(/TalentPool/img/employersignup.jpg);
-position: absolute;
-width: 630px;
-height: 964px;
-left: 0px;
-top: 0px; 
+.image {
+    background-image: url(/img/employersignup.jpg)!important;
+    background-size: auto cover 100% !important;
+    background-repeat: no-repeat;
+    display: block;
 } 
 
-.rightside {
-width: 85%;
-display: flex;
-position: absolute;
-left: 0px;
-top: 0px;
-}
- .header h4{
-margin-top: 90px!important;
-font-family: Poppins;
-font-style: normal;
-font-weight: 500;
-font-size: 24px;
-line-height: 36px;
-color: #084482;
+.content-container {
+    padding-bottom: 0!important;
+    max-width: 1440px;
 }
 
 .form-box {
+    padding-left: 5px;
+}
+
+.form-check-input{
+    width: 20px;
+    height: 24px;
+}
+    .header h4{
+    font-family: Poppins;
+    font-weight: 500;
+    font-size: 32px;
+    line-height:42px;
+    color: #084482;
+}
+    
+    
+    label {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 27px;
+    color: #1F2430;
+    }
+        
+
+    input::placeholder {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    color: rgba(178, 178, 178, 0.58);
+    
+    }
+    
+    
+.form-check-label{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    color: #495057;
     padding-left: 15px;
 }
 
-label {
-font-family: Poppins;
-font-style: normal;
-font-weight: normal;
-font-size: 18px;
-line-height: 27px;
-color: #1F2430;
 
+.btn-sign .btn-sign:visited {
+    background-color: #00AEFF !important;
 }
-
-input::placeholder {
-    font-family: Poppins;
-font-style: normal;
-font-weight: normal;
-font-size: 16px;
-line-height: 24px;
-color: rgba(178, 178, 178, 0.58);
-
-}
-
-.default1 {
-font-family: Poppins!important;
-font-style: normal;
-font-weight: normal;
-font-size: 18px;
-line-height: 27px;
-color: #D5D5D5;
-
-}
-.form-check-label{
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 16px;
-line-height: 19px;
-color: #495057;
-padding-left: 20px;
-}
-.btn-block {
- color: white;
-font-family: Poppins;
-font-style: normal;
-font-weight: 500;
-font-size: 24px;
-line-height: 36px;
+.btn-sign:hover{
+    background-color: #337ab7 !important;
+} 
+.btn-sign:active{
+    background-color: #084482 !important;
+} 
+a {
+    text-decoration: none!important;
 }
 span {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
-    color: #084482;
-
-}
-
-span:before,
-span:after {
-    content: '';
-    border-top:1px solid #084482;
-    margin: 0 20px 0 0;
-    flex: 1 0 20px;
-}
-
-span:after {
-    margin: 0 0 0 20px;
-}
-
-.btn-facebook {
-background: #3B5998;
-box-shadow: 0px 4px 10px rgba(98, 102, 110, 0.1);
-border-radius: 5px;
-width: 264px;
-height: 63px;
-left: 726px;
-/* top: 795px; */
-font-family: Poppins;
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-/* line-height: 24px; */
-color: white;
-text-align: center!important;
-border-radius: 5px;
-}
-
-.btn-google {
-width: 264px;
-height: 63px;
-left: 1027px;
-top: 795px;
-background: #DB4A39;
-box-shadow: 0px 4px 10px rgba(98, 102, 110, 0.1);
-border-radius: 5px;
-font-family: Poppins;
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 24px;
-text-align: center;
-color: #FFFFFF;
-
-}
-
-.acct {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
-    text-align: center;
-    color: #495057;
-}
-
-@media only screen and (max-width: 600px) {
-    .header h4 {
-        color: black!important;
-        font-weight: 600;
-    }
-    .header p {
-        color: black!important;
-        font-weight: 500;
-    }
-    .form-group label {
-        color: black!important;
-    }
-    .leftside {
-        display: none!important;
-    }
-    .rightside {
-        padding-left: 15px!important;
-        padding-right: 15px!important;
-        background: url(/TalentPool/img/employersignup.jpg);
-        background-size: cover;
-        background-position: center;
-        width: 100%!important;
-    }
-   
-    .form-row label {
-        font-weight: 500;
-        color: black!important;
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-family: Poppins;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 24px;
+        color: #084482;
+    
     }
     
-    .terms {
-        text-align: left!important;
-        font-size: 18px!important;
+    span:before,
+    span:after {
+        content: '';
+        border-top:2px solid #084482;
+        margin: 0 20px 0 0;
+        flex: 1 0 20px;
+    }
+    
+    span:after {
+        margin: 0 0 0 20px;
+    }
+    
+    .btn-social {
+    
+    box-shadow: 0px 4px 10px rgba(98, 102, 110, 0.1);
+    border-radius: 5px;
+    color: white;
+    text-align: center!important;
+    font-family: Poppins;
+    font-size: 18px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    }
+
+    .btn-facebook {
+        background: #3B5998;
+    }
+
+    .btn-google {
+    background: #DB4A39;
+    }
+
+    .btn-facebook:hover {
+        color:white;
+        background-color: #3a65c4;
+    }
+    
+    
+    .btn-google:hover {
         color: white;
+        background: #f7220b;
     }
+    
+    .fa {
+        font-size: 16px;
+    }
+
     .acct {
-        color: white!important;
-        padding-bottom: 30px!important;
+        font-size: 16px;
     }
-}
+    
